--- a/bootstraplinkedinclone/css/style.css
+++ b/bootstraplinkedinclone/css/style.css
@@ -1,6 +1,6 @@
 .navbarbg {
-  height: 55px;
-  background-color: white;
+  height: 56px !important ;
+  background-color: white !important ;
 }
 
 input.searche {
@@ -15,7 +15,9 @@ input.searche::placeholder {
   color: gray;
   background-image: url(/bootstraplinkedinclone/assets/search-solid.svg);
   background-repeat: no-repeat;
+  padding: 0 8px 0 40px;
   background-size: 7%;
+  background-position-y: 3px;
 }
 
 .body {
@@ -64,6 +66,7 @@ input.content {
 input.content::placeholder {
   font-weight: bolder;
   font-size: 14px;
+  padding: 0 8px 0 40px;
   font-family: Arial, Helvetica, sans-serif;
   background-image: url(/bootstraplinkedinclone/assets/edit-regular.svg);
   background-repeat: no-repeat;
@@ -127,4 +130,18 @@ button.ref:hover {
   font-weight: bold;
   font-size: 14px;
   margin-left: 8px;
+}
+
+.top-Margin {
+  margin-top: 75px !important;
+}
+
+.post {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #474747;
+}
+
+.xsmall{
+  font-size:  10px !important;
 }
